wrap code into function + fix bug with home folder image

--- a/pod/podfile/static/podfile/css/podfile.css
+++ b/pod/podfile/static/podfile/css/podfile.css
@@ -71,7 +71,7 @@ button.close {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.3rem;
+  /*border-radius: 0.3rem;*/
   outline: 0;
 }
 
